# display-modes

./: .gitignore  AUR-PUBLISH.md  LICENSE  README.md  pyproject.toml
aur/display-modes-git/: .SRCINFO  PKGBUILD
data/: io.github.displaymodes.desktop
display_modes/: __init__.py  app.py  backends.py  i18n.py
po/: fr.po
